--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,5 +32,11 @@ sqlx = {version="0.8.6", features = [
     "chrono",
     "json",
 ]}
+jsonwebtoken = "9.3.1"
+hex = "0.4.3"
+sha2 = "0.10.9"
+alloy = "1.0.30"
+bitcoin = "0.32.7"
+chrono = "0.4.42"
 
 
