--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,12 @@ edition = "2024"
 
 [dependencies]
 axum = {version = "0.7",features = ["macros"]}
+bigdecimal = { version = "0.4", features = ["serde"] }
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1.0", features = ["v4", "serde"] }
-tower = "0.4"
+tower = "0.5.2"
 tower-http = { version = "0.5", features = ["cors"] }
 rand = "0.8"
 moka = { version = "0.12.10", features = ["future"] }
@@ -31,6 +32,7 @@ sqlx = {version="0.8.6", features = [
     "bigdecimal",
     "chrono",
     "json",
+    "bigdecimal"
 ]}
 jsonwebtoken = "9.3.1"
 hex = "0.4.3"
@@ -38,5 +40,6 @@ sha2 = "0.10.9"
 alloy = "1.0.30"
 bitcoin = "0.32.7"
 chrono = "0.4.42"
+thiserror = "2.0.16"
 
 
